Revert "Added support to consider DML files contained inside jar files within the classpath, and mark the domain classes defined within those external dml files so that the DMLCompiler does not generate their respective non-base classes"
This reverts commit e2807b17b4b8229fdaa520173f4153ef5bad6208.