@@ -51,11 +51,7 @@ public class DmlCompiler {
 	ArrayList<URL> urls = new ArrayList<URL>();
 	for (String filename : dmlFiles) {
 	    try {
-        	    if(filename.startsWith("jar:file")) {
-        		urls.add(new URL(filename));
-        	    } else {
-        		urls.add(new File(filename).toURI().toURL());
-        	    }
+		urls.add(new File(filename).toURI().toURL());
 	    } catch (MalformedURLException mue) {
 		System.err.println("Cannot convert " + filename + " into an URL.  Ignoring it...");
 	    }
